force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/SVMXA360__SM_TA_TemplateItem__c.object-meta.xml
<CustomObject>
    <description>Object to store the details of the attributes included in the Template.</description>
    <label>Technical Attribute Template Item</label>
    <nameField>
        <displayFormat>TI-{00000000}</displayFormat>
        <label>Template Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Attribute Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>