force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__AttributeId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AttributeId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Attribute being displayed within the template</description>
    <inlineHelpText>Attribute being displayed within the template</inlineHelpText>
    <label>Attribute</label>
    <referenceTo>SVMXA360__SM_TA_TechnicalAttribute__c</referenceTo>
    <relationshipLabel>Technical Attribute Template Items</relationshipLabel>
    <relationshipName>TechnicalAttributeTemplateItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>