force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__CategoryId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CategoryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attribute belongs to this category.</description>
    <inlineHelpText>Attribute belongs to this category.</inlineHelpText>
    <label>Category</label>
    <referenceTo>SVMXA360__SM_TA_Category__c</referenceTo>
    <relationshipLabel>Technical Attribute Template Items</relationshipLabel>
    <relationshipName>TechnicalAttributeTemplateItems</relationshipName>
    <type>Lookup</type>
</CustomField>