force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DefaultValue__c</fullName>
    <description>Default value of the attribute</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Default value of the attribute</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>