force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>Checks for uniqueness of a record for a combination of Template, Category and Attribute. For example: DeveloperName = &apos;GENERAL_TEMPLATEINITIAL_ANALYSISTEMPERATURE&apos; where &apos;GENERAL_TEMPLATE&apos; is the developer name of the related template, &apos;INITIAL_ANALYSIS&apos; is the developer name of the category and &apos;TEMPERATURE&apos; is the developer name of the attribute.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Checks for uniqueness of a record for a combination of Template, Category and Attribute. For example: DeveloperName = &apos;GENERAL_TEMPLATEINITIAL_ANALYSISTEMPERATURE&apos; where &apos;GENERAL_TEMPLATE&apos; is the developer name of the related template, &apos;INITIAL_ANALYSIS&apos; is the developer name of the category and &apos;TEMPERATURE&apos; is the developer name of the attribute.</inlineHelpText>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>