force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__HelpText__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__HelpText__c</fullName>
    <description>Help text for the attribute</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Help text for the attribute</inlineHelpText>
    <label>Help Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>