force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the attribute is mandatory</description>
    <inlineHelpText>Indicates if the attribute is mandatory</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>