force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__Message__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Message__c</fullName>
    <description>Message to be displayed when the attribute value is not within the range of maximum-minimum value.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Message to be displayed when the attribute value is not within the range of maximum-minimum value.</inlineHelpText>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>