force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__MinimumValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MinimumValue__c</fullName>
    <description>Holds the minimum value for this number attribute.</description>
    <inlineHelpText>Holds the minimum value for this number attribute.</inlineHelpText>
    <label>Minimum Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>