force-app/main/default/objects/SVMXA360__SM_TA_TemplateItem__c/fields/SVMXA360__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TemplateId__c</fullName>
    <description>Template containing the attributes</description>
    <inlineHelpText>Template containing the attributes</inlineHelpText>
    <label>Template</label>
    <referenceTo>SVMXA360__SM_TA_Template__c</referenceTo>
    <relationshipLabel>Technical Attribute Template Items</relationshipLabel>
    <relationshipName>TechnicalAttributeTemplateItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>